[package]
name = "hashtables_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hashtables"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
rustc-hash = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench_maps"
harness = false
